style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}


body {
  font-family: helvetica, arial, sans-serif;
  text-align: center;
}


h1 {
  color: #373fff;
  margin-top: 3%;
  margin-bottom: 2%;
}

#submit-button {
  margin-top: 2%;
  width: 20%;
  border-radius: 5px;
  background-color: #373fff;
  color: white;
  padding: 12px 20px;
  font-size: 20px;
  min-width: 105px;
}

.input {
  width: 30%;
  float: left;
  width: 70%;
  margin-top: 6px;
  padding: 12px 20px;
}

.input-label {
  float: left;
  width: 25%;
  margin-top: 12px;
  min-width: 150px;
}

#generator {
  margin-top: 4%;
  margin-left: 20%;
  margin-bottom: 2%;
  padding: 5%;
  width: 60%;
  border-radius: 5px;
  background-color: #f2f2f2;
}

.section {
  margin-bottom: 2%;
}

.section:after {
  content: "";
  display: table;
  clear: both;
}

.meme-text {
  position: absolute;
  left: 50%;
  transform: translate(-50%,0);
  -webkit-text-stroke: 1.11px black;
  font-size: 3rem;
}


.meme {
  position: relative;
  color: white;
  float: left;
  margin-left: 2%;
}

.meme:hover {
  opacity: 0.9;
}

.delete-button {
  display: none;
  margin-top: 2%;
  width: 20%;
  border-radius: 5px;
  background-color: red;
  color: white;
  padding: 12px 5px;
  font-size: 30px; 
  right:5px;
  z-index: 5;
}

.meme:hover .delete-button {
  position: absolute;
  display: block;
}

.pic {
  max-width: 800px;
  height: auto;
}


.top-line {
  top: 5%;
}

.bottom-line {
  top: 79%;
}

